[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/LevelSelectionScreen/ReturnButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/LevelSelectionScreen/PlayButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/fonts/AlfaSlabOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/PreviewLevel/preview_desert.png" type="Texture" id=4]
[ext_resource path="res://Scenes/LevelSelectionScreen/LevelSelectionScreen.gd" type="Script" id=5]
[ext_resource path="res://Scenes/TitleScreen/FadeIn.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "fade_into_LevelScreen"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "changeToSelectedLevel"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_into_LevelSelectionScreen"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "changeToTitleScreen"
} ]
}

[node name="LevelSelectionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 32.0
margin_right = 639.0
margin_bottom = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -3
custom_fonts/font = SubResource( 2 )
text = "Level_1"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 196.0
margin_top = 90.0
margin_right = 444.0
margin_bottom = 324.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 248.0
margin_bottom = 200.0
alignment = 1

[node name="leftButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 200.0
text = "<"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 224.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 100, 100 )
texture = ExtResource( 4 )

[node name="rightButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 248.0
margin_bottom = 200.0
text = ">"

[node name="PlayButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 204.0
margin_right = 248.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( 90, 15 )
custom_fonts/font = SubResource( 1 )

[node name="ReturnButton" parent="." instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 315.0
margin_right = 166.0
margin_bottom = 352.0
rect_min_size = Vector2( 150, 30 )
flat = false

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AnimationPlayer" parent="FadeIn" index="0"]
anims/fade_into_LevelScreen = SubResource( 4 )
anims/fade_into_LevelSelectionScreen = SubResource( 3 )
anims/fade_into_TitleScreen = SubResource( 3 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/leftButton" to="." method="_on_leftButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/rightButton" to="." method="_on_rightButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]

[editable path="FadeIn"]
